--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "jest": "^29.4.2",
+    "jest-editor-support": "^31.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
